# gitmeup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
gitmeup/: cli.py
