[project]
name = "gitmeup"
version = "0.1.0"
description = "LLM-assisted conventional commits generator for git repositories. Automatically generates git add and commit lines based on git diff and status."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "google-genai>=0.6.0",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
gitmeup = "gitmeup.cli:main"

[project.urls]
Homepage = "https://github.com/ikramagix/gitmeup"
Source = "https://github.com/ikramagix/gitmeup"
Issues = "https://github.com/ikramagix/gitmeup/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"